Modified login page

--- a/Client/views/home.html
+++ b/Client/views/home.html
@@ -168,7 +168,7 @@
       </div>
       <div class="modal-footer text-center">
         <button type="button" class="btn btn-default" id="closebtn" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Facebook Login</button>
+        <!-- <button type="button" class="btn btn-primary">Facebook Login</button> -->
       </div>
     </div>
   </div>
